# rust-benchmark

./: Cargo.toml
benches/: test.rs
src/: lib.rs
