[package]
name = "loop_bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
bench = false

[dependencies]

[[bench]]
name = "test"
harness = false

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
